<resources>
    <string name="app_name">Series Network</string>

    <string name="seriesName">Serienname</string>
    <string name="seriesYear">Serienjahr</string>
    <string name="seriesEdit">Serieneingabe</string>
    <string name="userEdit">Namen eingeben...</string>
    <string name="seriesFoundMessage">Gefundene Serie(n)</string>
    <string name="seriesRating">Serienwertung</string>
    <string name="seriesActors">Serienschauspieler</string>
    <string name="seriesPlot">Plot der Serie</string>

    <string name="searchButton">Suche</string>
    <string name="addButton">Hinzufügen</string>
    <string name="deleteButton">Entfernen</string>
    <string name="acceptButton">Login</string>
    <string name="registerButton">Registrieren</string>


    <string name="action_settings">Noch nicht gesetzt</string>
    <string name="series_Search">Suche</string>
    <string name="series_Top_30">Top 10</string>
    <string name="series_Main">Start</string>
    <string name="series_Friend">Freunde</string>
    <string name="no_seasons">Leider ist die Liste für diese Serie nicht verfügbar.</string>
    <string name="no_series_in_list">Sie haben keine Serien in ihrer persönlichen Serienliste!</string>

    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_search">Suche</string>
    <string name="title_activity_list">Liste</string>
    <string name="title_activity_top30">Top 10</string>
    <string name="title_activity_friends">Social</string>
    <string name="title_activity_friends_series">Dieser Nutzer sieht</string>
    <string name="title_activity_series_overview">SeriesOverviewActivity</string>
    <string name="title_activity_series_detail">SeriesDetailActivity</string>
    <string name="title_activity_series_season">Serieninformation</string>
    <string name="image_description">Series Image</string>
    <string name="image_description_start">Startbildschirm Icons </string>
    <string name="fragmentRating">Rating: </string>
    <string name="fragmentYear">Ausstrahlungsjahr: </string>
    <string name="fragmentActor">Schauspieler: </string>
    <string name="fragmentDescription">Serienbeschreibung: </string>
    <string name="title_activity_user">UserActivity</string>
</resources>
