<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/search_scrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.serien.android.androidserienprojekt.activities.SearchActivity">


    <EditText
        android:id="@+id/search_series_searchterm"
        android:hint="@string/seriesEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/search_searchButton"
        android:layout_toStartOf="@+id/search_searchButton" />

    <Button
        android:id="@+id/search_searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:id="@+id/search_series_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_below="@+id/search_series_searchterm"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/image_description" />

    <TextView
        android:id="@+id/search_series_name"
        android:text="@string/seriesName"
        android:background="@android:color/darker_gray"
        android:padding="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_below="@+id/search_series_image"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/search_series_year"
        android:text="@string/seriesYear"
        android:padding="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_below="@+id/search_series_name"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/search_series_actors"
        android:text="@string/seriesActors"
        android:background="@android:color/darker_gray"
        android:padding="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_below="@+id/search_series_year"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/search_series_rating"
        android:text="@string/seriesRating"
        android:padding="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_below="@+id/search_series_actors"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/search_series_plot"
        android:text="@string/seriesPlot"
        android:background="@android:color/darker_gray"
        android:padding="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_below="@+id/search_series_rating"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/search_addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addButton"
        android:layout_below="@+id/search_series_plot"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

    <Button
        android:id="@+id/search_deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleteButton"
        android:layout_below="@+id/search_series_plot"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>
</RelativeLayout>

</ScrollView>
