<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@android:color/darker_gray"
    tools:context="com.serien.android.androidserienprojekt.activities.TestActivity">

    <TextView
        android:id="@+id/season_series_name"
        android:text="@string/seriesName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:layout_below="@+id/search_series_image"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/search_series_year"
        android:text="@string/seriesYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:layout_below="@+id/season_series_name"
        android:layout_centerHorizontal="true"
         />

    <TextView
        android:id="@+id/search_series_actors"
        android:text="@string/seriesActors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:layout_below="@+id/search_series_year"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/search_series_rating"
        android:text="@string/seriesRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:layout_below="@+id/search_series_actors"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/search_series_plot"
        android:text="@string/seriesPlot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:layout_below="@+id/search_series_rating"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/search_series_image"
        android:layout_centerHorizontal="true"
        android:gravity="center"
         />

</RelativeLayout>
