<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_scrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@mipmap/bg_standart">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:background="@drawable/rounded_corner_with_bg">


        <TextView
            android:id="@+id/detail_series_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/black"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/detail_series_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_description"
            android:padding="5dp"/>



        <TextView
            android:id="@+id/rating_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:text="@string/fragmentRating"
            android:layout_toRightOf="@id/detail_series_image"/>

        <TextView
            android:id="@+id/detail_series_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_toRightOf="@id/detail_series_image"
            android:layout_below="@id/rating_head"/>



        <TextView
            android:id="@+id/year_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:text="@string/fragmentYear"
            android:layout_toRightOf="@id/detail_series_image"
            android:layout_below="@id/detail_series_rating" />

        <TextView
            android:id="@+id/detail_series_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_toRightOf="@id/detail_series_image"
            android:layout_below="@id/year_head"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/actor_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_marginTop="15dp"
            android:text="@string/fragmentActor" />

        <TextView
            android:id="@+id/detail_series_actors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>



        <TextView
            android:id="@+id/plot_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_marginTop="15dp"
            android:text="@string/fragmentDescription"/>

        <TextView
            android:id="@+id/detail_series_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/detail_add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/addButton"
            android:layout_marginTop="20dp"
            android:background="@drawable/style_for_buttons"/>

    </LinearLayout>

</ScrollView>